# django_auto

./: .dockerignore  .gitignore  Dockerfile  README.md  celery_app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  server_restart.yml
autos/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
autos/migrations/: 0003_alter_request_options_and_more.py  0004_alter_auto_vin_alter_spare_autodoc_url_and_more.py  0005_spare_price_graph.py  0009_alter_request_spare.py  0010_alter_request_delivery_time_alter_request_difference_and_more.py
autos/services/making_querysets/: querysets.py
autos/services/plotting/domain/: making_graphs.py
autos/services/plotting/infrastructure/: making_graphs_task.py
autos/services/price_parsing/domain/: autodoc_parsing.py  exist_parsing.py  parsing_service.py
autos/services/price_parsing/infrastructure/: add_spare_task.py  parsing_task.py
autos/templates/autos/: add_spare.html  login.html  spares.html
autos/templatetags/: myfilters.py
autos/tests/: conftest.py  test_api.py
autoworld/: asgi.py  celery_app.py  env_settings.py  pytest.ini  sentry.py  settings.py  urls.py  wsgi.py
autoworld/autos/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
autoworld/autos/migrations/: 0001_initial.py  0002_alter_request_spare.py  0006_alter_spare_price_graph.py  0007_request_difference.py  0008_request_site.py
autoworld/autos/services/making_querysets/: querysets.py
autoworld/autos/services/plotting/domain/: making_graphs.py
autoworld/autos/services/plotting/infrastructure/: making_graphs_task.py
autoworld/autos/services/price_parsing/domain/: autodoc_parsing.py  exist_parsing.py  parsing_service.py
autoworld/autos/services/price_parsing/infrastructure/: add_spare_task.py  parsing_task.py
autoworld/autos/static/autos/css/: style.css
autoworld/autos/templates/autos/: autos.html  base.html  index.html  oldbase.html  register.html  spare.html
autoworld/autos/templatetags/: myfilters.py
autoworld/autos/tests/: test_api.py
autoworld/autoworld/: asgi.py  env_settings.py  local_settings.py  sentry.py  settings.py  urls.py  wsgi.py
autoworld/config/: auto.conf  celery.conf  celerybeat.conf  gunicorn.conf.py  selenium.conf
docker/: Dockerfile  entrypoint.sh
utils/: healthcheck.py
